--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tinymce/tinymce-react": "^6.1.0",
     "animejs": "^4.0.2",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
