--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tinymce/tinymce-react": "^6.1.0",
+    "@vercel/analytics": "^1.5.0",
     "animejs": "^4.0.2",
     "antd": "^5.24.9",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "react": "^18.3.1",
-"react-dom": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
